src/test/examples/invalid/semanticErr/expressions/intOpTypeErr.wacc
# Incompatible type at false (expected: INT, actual: BOOL)

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int x = true + false
end
